# curated-heuristic-loop

./: .env.sample  .gitignore  AGENTS.md  AGENTS.md.sample  CHANGELOG.md  CLAUDE.md.sample  LICENSE  README.md  evaluator.md  evaluator_cpu.md  generator.md  pyproject.toml  requirements.txt  requirements_apple.txt  requirements_cpu.txt  requirements_cuda.txt  requirements_docker.txt  requirements_nvidia.txt  start-chl.bat  start-chl.sh  test_parser_standalone.py  test_query_parser.py
doc/: 01_faiss_refinment_review.md  06_web_interface_review.md  architecture.md  chl_guide.md  chl_manual.md  concept.md  cpu_only_user.md  curation.md  curation_sample.md  curation_spec.md  experience_curation.md  gpu_auto_detection.md  gpu_cpu_mode_isolate.md  install_env.md  manual.md  queue_drain_deadlock.md  run_sample.md
doc/config/: skills_access_control.md
doc/cpu/: implementation_plan.md
doc/docker/: README.md
doc/plan/: 03_refine_search.md  04_chl_refine.md  05_web_api.md  06_web_interface.md  07_code_cleanup_summary.md  07_phase1_implementation_summary.md  07_phase2_implementation_summary.md  07_plan_review.md  07_web_refine.md  08_mcp_feedback.md  0_skill_curation_prepare.md  1_skill_import_export.md  1_skill_table_schema.md  2_skill_curation.md  2_skill_import_export.md  3_scripts_refactor.md  3_skill_curation.md  4_skill_curation.md  4_skill_format.md  5_skill_curation.md  architecture_refine.md  before-test-result.md  curation-refine-phase1.md  curation-refine-phase2.md  experience-curation-refine.md  phase0-refinement.md  phase0-test-data.md  phase1-plumbing-safety.md  phase2-spec.md  phase2-validation-plan.md  phase3-agent.md  phase3-step2-review.md  phase3-step2-round-loop.md  phase_0_code_isolation.md  phase_0_scripts_migration.md  phase_b_gpu.md  search-improvement.md  semantic-search-refine.md  semi-auto-curation.md  skill_refactor.md  (+1 more)
docker/: Dockerfile.cuda-mvp
scripts/: _config_loader.py  _embedding_sync.py  check_api_env.py  check_api_env_apple.py  check_api_env_cpu.py  check_api_env_nvidia.py  demo_datapipe_bug.py  export.py  gpu_smoke_test.py  import.py  migrate_add_faiss_unique_constraint.py  migrate_manual_to_skill.py  rebuild_index.py  scripts_config.yaml  scripts_config.yaml.sample  search_health.py  seed_default_content.py  setup-cpu.py  setup-gpu.py  setup.py  smoke_test_apple.py  smoke_test_cpu.py  smoke_test_cuda.py  sync_embeddings.py  sync_guidelines.py  validate_docs.py  validate_requirements.py  write_entry_smoke.py
scripts/curation/: build_communities.py  build_curation_index.py  decision_logging.py  duplicate_finder.py  export_curated.py  export_manual_queue.py  find_pending_dups.py  find_pending_dups_backup.py  import_to_curation_db.py  init_curation_db.py  interactive_reviewer.py  merge_exports.py  run_phase3.py  (+5 more)
src/: api_client.py  api_server.py  config.py  mcp_server_direct.py  server.py
tests/: test_config.py
(+262 files in other folders)
