# CHL MCP Server
#
# This pyproject.toml is for the MCP server ONLY, which communicates with the
# API server via HTTP. The API server has its own platform-specific requirements
# files (requirements_cpu.txt, requirements_apple.txt, requirements_cuda.txt).
#
# Installation:
#   uv sync --python 3.11
#
# The MCP server requires the API server to be running at the configured base URL
# (default: http://localhost:8000). See README.md for full setup instructions.

[project]
name = "chl-mcp-server"
version = "0.2.0"
description = "Curated Heuristic Loop MCP Server - HTTP client for CHL API"
requires-python = ">=3.10,<3.12"
dependencies = [
    # MCP protocol
    "fastmcp>=0.3.0",

    # HTTP client for API communication
    "httpx>=0.27.0",
    "requests>=2.31.0",

    # Configuration and utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]
test = [
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "cpu_only: run test with CHL_BACKEND=cpu",
    "sqlite_only: (deprecated, use cpu_only) run test with CHL_BACKEND=cpu",
]
